--- a/.github/workflows/01-building-blocks.yml
+++ b/.github/workflows/01-building-blocks.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   echo-hello:
-   runs-on: ubuntu_latest
+   runs-on: ubuntu-latest
    steps:
     - run: echo "Say Hello"
   echo-goodbye:
