01-building-blocks.yml

--- a/.github/workflows/01-building-blocks.yml
+++ b/.github/workflows/01-building-blocks.yml
@@ -12,6 +12,10 @@ jobs:
   echo-goodbye:
    runs-on: ubuntu-latest
    steps:
-    - run: echo "Failed step"
+    - name: Multi-line bash
+      run: |
+       echo "I"
+       echo "will"
+       echo "fail"
     - run: echo "Say goodbye"
    
