--- a/.github/workflows/02-Workflow events.yml
+++ b/.github/workflows/02-Workflow events.yml
@@ -1,7 +1,11 @@
 name: Workflow Events
 
 on: 
- push
+ push:
+ pull_request:
+ workflow_dispatch:
+ schedule:
+  - cron: '*/5 * * * *'
 
 jobs:
   echo-:
