03-workflow-runners.yml

--- a/.github/workflows/03-workflow-runners.yml
+++ b/.github/workflows/03-workflow-runners.yml
@@ -18,6 +18,4 @@ jobs:
  run-on-mac:
   runs-on: mac-latest
   steps:
-      - name: shell
-        shell: bash
-        run: echo "It is running on $RUNNER_OS"
+   - run: echo "It is running on $RUNNER_OS"
